--- a/lib/eventasaurus_web/live/admin/category_insights_live.html.heex
+++ b/lib/eventasaurus_web/live/admin/category_insights_live.html.heex
@@ -41,6 +41,12 @@
       >
         Insights
       </.link>
+      <.link
+        navigate={~p"/admin/categories/mappings"}
+        class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm"
+      >
+        Mappings
+      </.link>
     </nav>
   </div>
 
