--- a/lib/eventasaurus_web/live/admin/category_mappings_live.html.heex
+++ b/lib/eventasaurus_web/live/admin/category_mappings_live.html.heex
@@ -210,6 +210,7 @@
           </div>
 
           <div class="flex items-center">
+            <input type="hidden" name="category_mapping[is_active]" value="false" />
             <input
               type="checkbox"
               name="category_mapping[is_active]"
