--- a/lib/eventasaurus_web/components/layouts/admin.html.heex
+++ b/lib/eventasaurus_web/components/layouts/admin.html.heex
@@ -43,6 +43,7 @@
         <.sidebar_section title="Tools">
           <.sidebar_item path="/admin/venues/duplicates" label="Venue Duplicates" icon={:duplicate} assigns={assigns} />
           <.sidebar_item path="/admin/images" label="Image Cache" icon={:photograph} assigns={assigns} />
+          <.sidebar_item path="/admin/cache" label="Cache Management" icon={:refresh} assigns={assigns} />
           <.sidebar_item path="/admin/geocoding" label="Geocoding" icon={:globe} assigns={assigns} />
           <.sidebar_item path="/admin/costs" label="Service Costs" icon={:currency_dollar} assigns={assigns} />
           <.sidebar_item path="/admin/sitemap" label="Sitemap" icon={:map} assigns={assigns} />
@@ -156,6 +157,7 @@
           <.mobile_sidebar_section title="Tools">
             <.mobile_sidebar_item path="/admin/venues/duplicates" label="Venue Duplicates" />
             <.mobile_sidebar_item path="/admin/images" label="Image Cache" />
+            <.mobile_sidebar_item path="/admin/cache" label="Cache Management" />
             <.mobile_sidebar_item path="/admin/geocoding" label="Geocoding" />
             <.mobile_sidebar_item path="/admin/costs" label="Service Costs" />
             <.mobile_sidebar_item path="/admin/sitemap" label="Sitemap" />
