--- a/lib/eventasaurus_web/controllers/marketing/marketing_html/about.html.heex
+++ b/lib/eventasaurus_web/controllers/marketing/marketing_html/about.html.heex
@@ -160,11 +160,11 @@
         <.oat_footer_link href="/dev/marketing/how-it-works">How It Works</.oat_footer_link>
         <.oat_footer_link href="/dev/marketing/about">About</.oat_footer_link>
         <.oat_footer_link href="/dev/marketing/pricing">Pricing</.oat_footer_link>
-        <.oat_footer_link href="#">Privacy</.oat_footer_link>
-        <.oat_footer_link href="#">Terms</.oat_footer_link>
+        <.oat_footer_link href="/dev/marketing/privacy">Privacy</.oat_footer_link>
+        <.oat_footer_link href="/dev/marketing/terms">Terms</.oat_footer_link>
       </:links>
       <:fineprint>
-        © 2025 Wombie
+        © <%= Date.utc_today().year %> Wombie
       </:fineprint>
     </.oat_footer>
 
